--- a/app/src/main/res/layout/workout_history_expandable_layout.xml
+++ b/app/src/main/res/layout/workout_history_expandable_layout.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="5dp">
+        android:layout_marginTop="10dp">
 
         <TextView
             android:id="@+id/textViewHistoryDetailSeriesCount"
@@ -51,7 +51,7 @@
     <TextView
         android:id="@+id/textViewHistoryDetailNote"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:text="Note"
         android:textSize="20sp"
         android:layout_marginStart="10dp"
