--- a/app/src/main/res/layout/fragment_training_history.xml
+++ b/app/src/main/res/layout/fragment_training_history.xml
@@ -10,9 +10,17 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewWorkoutHistory"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="5dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.93"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
