--- a/app/src/main/res/layout/routine_expandable_layout.xml
+++ b/app/src/main/res/layout/routine_expandable_layout.xml
@@ -1,31 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/expandableLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-<!--        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/textViewExercise"
-                    style="@style/routine_text_view_item"
-                    android:text="@string/exercise" />
-
-                <EditText
-                    android:id="@+id/editTextExercise"
-                    style="@style/routine_edit_text_item"
-                    android:hint="@string/enter_exercise_name" />
-        </LinearLayout>-->
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
+
 
                 <TextView
                     android:id="@+id/textViewPause"
@@ -44,12 +29,18 @@
                     android:layout_height="match_parent"
                     android:spinnerMode="dropdown"
                     android:layout_marginEnd="5dp" />
+
+                <ImageView
+                    android:id="@+id/imageViewPauseDescription"
+                    style="@style/routine_image_view_description" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
+
 
                 <TextView
                     android:id="@+id/textViewLoad"
@@ -68,6 +59,10 @@
                     android:layout_height="match_parent"
                     android:spinnerMode="dropdown"
                     android:layout_marginEnd="5dp"/>
+
+                <ImageView
+                    android:id="@+id/imageViewLoadDescription"
+                    style="@style/routine_image_view_description" />
         </LinearLayout>
 
         <LinearLayout
@@ -84,12 +79,17 @@
                     android:id="@+id/editTextReps"
                     style="@style/routine_edit_text_item"
                     android:hint="@string/enter_reps"/>
+                <ImageView
+                    android:id="@+id/imageViewRepsDescription"
+                    style="@style/routine_image_view_description" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
+
 
                 <TextView
                     android:id="@+id/textViewSeries"
@@ -101,12 +101,18 @@
                     style="@style/routine_edit_text_item"
                     android:hint="@string/enter_series"
                     android:inputType="number"/>
+
+                <ImageView
+                    android:id="@+id/imageViewSeriesDescription"
+                    style="@style/routine_image_view_description" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
+
 
                 <TextView
                     android:id="@+id/textViewRpe"
@@ -117,11 +123,17 @@
                     android:id="@+id/editTextRpe"
                     style="@style/routine_edit_text_item"
                     android:hint="@string/enter_rpe"/>
+
+                <ImageView
+                    android:id="@+id/imageViewRpeDescription"
+                    style="@style/routine_image_view_description" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
+
 
                 <TextView
                     android:id="@+id/textViewPace"
@@ -132,5 +144,9 @@
                     android:id="@+id/editTextPace"
                     style="@style/routine_edit_text_item"
                     android:hint="@string/enter_pace"/>
+
+                <ImageView
+                    android:id="@+id/imageViewPaceDescription"
+                    style="@style/routine_image_view_description" />
         </LinearLayout>
 </LinearLayout>
