--- a/app/src/main/res/layout/routine_expandable_layout.xml
+++ b/app/src/main/res/layout/routine_expandable_layout.xml
@@ -5,148 +5,168 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
 
+        <TextView
+            android:id="@+id/textViewPause"
+            style="@style/routine_text_view_item"
+            android:text="@string/pause" />
 
-                <TextView
-                    android:id="@+id/textViewPause"
-                    style="@style/routine_text_view_item"
-                    android:text="@string/pause" />
+        <EditText
+            android:id="@+id/editTextPause"
+            style="@style/routine_edit_text_item"
+            android:layout_weight="1"
+            android:hint="@string/enter_pause" />
 
-                <EditText
-                    android:id="@+id/editTextPause"
-                    style="@style/routine_edit_text_item"
-                    android:hint="@string/enter_pause"
-                    android:layout_weight="1" />
+        <Spinner
+            android:id="@+id/spinnerPause"
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:spinnerMode="dropdown" />
 
-                <Spinner
-                    android:id="@+id/spinnerPause"
-                    android:layout_width="100dp"
-                    android:layout_height="match_parent"
-                    android:spinnerMode="dropdown"
-                    android:layout_marginEnd="5dp" />
+        <FrameLayout
+            android:id="@+id/imageViewPauseDescription"
+            style="@style/routine_description_layout">
 
-                <ImageView
-                    android:id="@+id/imageViewPauseDescription"
-                    style="@style/routine_image_view_description" />
-        </LinearLayout>
+            <ImageView
+                style="@style/routine_image_view_description" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+        </FrameLayout>
 
+    </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/textViewLoad"
-                    style="@style/routine_text_view_item"
-                    android:text="@string/load"/>
+        <TextView
+            android:id="@+id/textViewLoad"
+            style="@style/routine_text_view_item"
+            android:text="@string/load" />
 
-                <EditText
-                    android:id="@+id/editTextLoad"
-                    style="@style/routine_edit_text_item"
-                    android:hint="@string/enter_load"
-                    android:layout_weight="1"
-                    android:inputType="numberDecimal"/>
-                <Spinner
-                    android:id="@+id/spinnerLoad"
-                    android:layout_width="100dp"
-                    android:layout_height="match_parent"
-                    android:spinnerMode="dropdown"
-                    android:layout_marginEnd="5dp"/>
+        <EditText
+            android:id="@+id/editTextLoad"
+            style="@style/routine_edit_text_item"
+            android:layout_weight="1"
+            android:hint="@string/enter_load"
+            android:inputType="numberDecimal" />
 
-                <ImageView
-                    android:id="@+id/imageViewLoadDescription"
-                    style="@style/routine_image_view_description" />
-        </LinearLayout>
+        <Spinner
+            android:id="@+id/spinnerLoad"
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:spinnerMode="dropdown" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+        <FrameLayout
+            android:id="@+id/imageViewLoadDescription"
+            style="@style/routine_description_layout">
 
-                <TextView
-                    android:id="@+id/textViewReps"
-                    style="@style/routine_text_view_item"
-                    android:text="@string/reps"/>
+            <ImageView
+                style="@style/routine_image_view_description" />
+        </FrameLayout>
+    </LinearLayout>
 
-                <EditText
-                    android:id="@+id/editTextReps"
-                    style="@style/routine_edit_text_item"
-                    android:hint="@string/enter_reps"/>
-                <ImageView
-                    android:id="@+id/imageViewRepsDescription"
-                    style="@style/routine_image_view_description" />
-        </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+        <TextView
+            android:id="@+id/textViewReps"
+            style="@style/routine_text_view_item"
+            android:text="@string/reps" />
 
+        <EditText
+            android:id="@+id/editTextReps"
+            style="@style/routine_edit_text_item"
+            android:hint="@string/enter_reps" />
 
+        <FrameLayout
+            android:id="@+id/imageViewRepsDescription"
+            style="@style/routine_description_layout">
 
-                <TextView
-                    android:id="@+id/textViewSeries"
-                    style="@style/routine_text_view_item"
-                    android:text="@string/series"/>
+            <ImageView
 
-                <EditText
-                    android:id="@+id/editTextSeries"
-                    style="@style/routine_edit_text_item"
-                    android:hint="@string/enter_series"
-                    android:inputType="number"/>
+                style="@style/routine_image_view_description" />
+        </FrameLayout>
+    </LinearLayout>
 
-                <ImageView
-                    android:id="@+id/imageViewSeriesDescription"
-                    style="@style/routine_image_view_description" />
-        </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+        <TextView
+            android:id="@+id/textViewSeries"
+            style="@style/routine_text_view_item"
+            android:text="@string/series" />
 
+        <EditText
+            android:id="@+id/editTextSeries"
+            style="@style/routine_edit_text_item"
+            android:hint="@string/enter_series"
+            android:inputType="number" />
 
+        <FrameLayout
+            android:id="@+id/imageViewSeriesDescription"
+            style="@style/routine_description_layout">
 
-                <TextView
-                    android:id="@+id/textViewRpe"
-                    style="@style/routine_text_view_item"
-                    android:text="@string/rpe" />
+            <ImageView
+                style="@style/routine_image_view_description" />
+        </FrameLayout>
+    </LinearLayout>
 
-                <EditText
-                    android:id="@+id/editTextRpe"
-                    style="@style/routine_edit_text_item"
-                    android:hint="@string/enter_rpe"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/imageViewRpeDescription"
-                    style="@style/routine_image_view_description" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+        <TextView
+            android:id="@+id/textViewRpe"
+            style="@style/routine_text_view_item"
+            android:text="@string/rpe" />
 
+        <EditText
+            android:id="@+id/editTextRpe"
+            style="@style/routine_edit_text_item"
+            android:hint="@string/enter_rpe" />
 
+        <FrameLayout
+            android:id="@+id/imageViewRpeDescription"
+            style="@style/routine_description_layout">
 
-                <TextView
-                    android:id="@+id/textViewPace"
-                    style="@style/routine_text_view_item"
-                    android:text="@string/pace"/>
+            <ImageView
+                style="@style/routine_image_view_description" />
+        </FrameLayout>
 
-                <EditText
-                    android:id="@+id/editTextPace"
-                    style="@style/routine_edit_text_item"
-                    android:hint="@string/enter_pace"/>
+    </LinearLayout>
 
-                <ImageView
-                    android:id="@+id/imageViewPaceDescription"
-                    style="@style/routine_image_view_description" />
-        </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textViewPace"
+            style="@style/routine_text_view_item"
+            android:text="@string/pace" />
+
+        <EditText
+            android:id="@+id/editTextPace"
+            style="@style/routine_edit_text_item"
+            android:hint="@string/enter_pace" />
+
+        <FrameLayout
+            android:id="@+id/imageViewPaceDescription"
+            style="@style/routine_description_layout">
+
+            <ImageView
+                style="@style/routine_image_view_description" />
+        </FrameLayout>
+    </LinearLayout>
 </LinearLayout>
