--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,7 +17,7 @@
         <item name="android:layout_height">48dp</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:textSize">16sp</item>
-        <item name="android:layout_marginRight">10dp</item>
+        <item name="android:layout_marginEnd">5dp</item>
         <item name="android:singleLine">true</item>
         <item name="android:layout_weight">1</item>
     </style>
@@ -25,12 +25,17 @@
     <style name="routine_image_view_description">
         <item name="android:layout_height">25dp</item>
         <item name="android:layout_width">25dp</item>
-        <item name="android:layout_marginStart">5dp</item>
-        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:layout_marginStart">12dp</item>
+        <item name="android:layout_marginTop">12dp</item>
         <item name="android:contentDescription">@string/termdescription</item>
         <item name="android:background">@drawable/baseline_help_outline_24</item>
+    </style>
+
+    <style name="routine_description_layout">
+        <item name="android:layout_height">48dp</item>
+        <item name="android:layout_width">48dp</item>
+        <item name="android:layout_gravity">center</item>
         <item name="android:clickable">true</item>
-        <item name="android:layout_marginEnd">10dp</item>
     </style>
 
     <style name="workout_text_view_title_item" parent="@android:style/TextAppearance.Small">
