--- a/app/src/main/res/layout/fragment_training_history.xml
+++ b/app/src/main/res/layout/fragment_training_history.xml
@@ -19,7 +19,8 @@
         android:queryHint="Search in history..."
         android:focusable="false"
         android:closeIcon="@drawable/baseline_clear_24"
-        android:background="@drawable/search_background"/>
+        android:background="@drawable/search_background"
+        android:queryBackground="@android:color/transparent"/>
 
 
     <androidx.recyclerview.widget.RecyclerView
