--- a/app/src/main/res/layout/training_plans_recycler_view_item_layout.xml
+++ b/app/src/main/res/layout/training_plans_recycler_view_item_layout.xml
@@ -41,6 +41,23 @@
                 app:layout_constraintTop_toTopOf="parent"
                 android:textColor="#D7D7D7"/>
 
+            <FrameLayout
+                android:id="@+id/moreButton"
+                android:layout_width="50dp"
+                android:layout_height="48dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:clickable="true">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/baseline_dehaze_24"
+                    android:contentDescription="More"
+                    android:layout_gravity="center"/>
+            </FrameLayout>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
