--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -30,6 +30,7 @@
             android:id="@+id/spinnerTrainingPlans"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
+            android:layout_marginStart="15dp"
             android:layout_gravity="center"
             android:spinnerMode="dropdown"
 
@@ -116,7 +117,6 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
-        android:backgroundTint="#4A4A4A"
         android:text="Return to your workout"
         android:textSize="23sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -139,6 +139,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.93"/>
+        app:layout_constraintGuide_percent="0.90"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
