--- a/app/src/main/res/layout/create_routine_recycler_view_item.xml
+++ b/app/src/main/res/layout/create_routine_recycler_view_item.xml
@@ -8,47 +8,10 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/linearLayoutExerciseTitleElement"
+    <com.example.gymapp.layout.RoutineExpandableTitleLayout
+        android:id="@+id/exerciseTitle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:clickable="true">
-
-        <ImageView
-            android:id="@+id/buttonExpand"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="6dp"
-            android:background="@drawable/baseline_expand_more_24"
-            android:rotation="-90"/>
-
-        <EditText
-            android:id="@+id/editTextExerciseName"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="45dp"
-            android:layout_weight="1"
-            android:hint="Exercise name"
-            android:textSize="22sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageButton
-            android:id="@+id/imageButtonMove"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="6dp"
-            android:layout_marginEnd="10dp"
-            android:background="@drawable/baseline_drag_indicator_24"
-            android:contentDescription="move" />
-
-
-    </LinearLayout>
+        android:layout_height="wrap_content"/>
 
     <com.example.gymapp.layout.RoutineExpandableLayout
         android:id="@+id/exerciseDetails"
