--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -3,8 +3,8 @@
 
     <item
         android:id="@+id/buttonHome"
-        android:title="Home"
-        android:icon="@drawable/house_icon"/>
+        android:title="Workout"
+        android:icon="@drawable/baseline_fitness_center_24"/>
 
     <item
         android:id="@+id/buttonTrainingPlans"
