--- a/app/src/main/res/drawable/background_color.xml
+++ b/app/src/main/res/drawable/background_color.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
     <gradient
         android:startColor="#000f18"
         android:centerColor="#283840"
@@ -7,8 +8,4 @@
         android:angle="90"
         android:centerX="0.75"
         android:centerY="0.5" />
-    <corners
-        android:topRightRadius="25dp"
-        android:topLeftRadius="25dp"/>
-
 </shape>
