--- a/app/src/main/res/layout/activity_training_plan.xml
+++ b/app/src/main/res/layout/activity_training_plan.xml
@@ -33,6 +33,7 @@
         android:layout_height="0dp"
         android:background="@drawable/baseline_add_circle_24"
         android:contentDescription="Add Routine"
+        style="@style/CustomAddButtonColor"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="@+id/guideline"
