--- a/app/src/main/res/layout/workout_history_recycler_view_item.xml
+++ b/app/src/main/res/layout/workout_history_recycler_view_item.xml
@@ -10,13 +10,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="8dp"
-        app:cardCornerRadius="3dp"
         app:cardElevation="3dp"
         app:cardUseCompatPadding="true">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:background="@drawable/button_color">
 
             <TextView
                 android:id="@+id/textViewHistoryPlanName"
