--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.GymApp" parent="@style/Theme.AppCompat.NoActionBar" />
+    <style name="Theme.GymApp" parent="@style/Theme.AppCompat.NoActionBar">
+        <item name="android:alertDialogTheme">@style/YourAlertDialogTheme</item>
+
+        <item name="android:windowBackground">@drawable/background_color</item>
+        <item name="colorPrimary">@color/white</item>
+        <item name="colorPrimaryDark">@color/app_background</item>
+
+        <item name="cardViewStyle">@style/CustomCardView</item>
+        <item name="buttonStyle">@style/CustomButtonStyle</item>
+        <item name="android:textViewStyle">@style/CustomTextViewStyle</item>
+    </style>
 
     <style name="routine_text_view_item" parent="@android:style/TextAppearance.Small">
         <item name="android:textSize">20sp</item>
@@ -54,10 +64,44 @@
 
     <style name="CustomBottomSheetDialogTheme" parent="Theme.Design.BottomSheetDialog">
         <item name="bottomSheetStyle">@style/CustomBottomSheetStyle</item>
+        <item name="android:buttonStyle">@style/CustomButtonStyle</item>
     </style>
 
     <style name="CustomBottomSheetStyle" parent="Widget.Design.BottomSheet.Modal">
         <item name="android:background">@android:color/transparent</item>
+    </style>
+
+    <style name="CustomCardView" parent="CardView">
+        <item name="cardBackgroundColor">@color/red</item>
+        <item name="cardCornerRadius">5dp</item>
+    </style>
+
+<!--    <style name="CustomRecyclerViewItem">
+        <item name="android:background">@drawable/button_color</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">match_parent</item>
+    </style>-->
+
+    <style name="CustomAddButtonColor">
+        <item name="android:backgroundTint">#ef0000</item>
+    </style>
+
+    <style name="CustomButtonStyle" parent="Widget.AppCompat.Button">
+        <item name="android:background">@drawable/button_color</item>
+    </style>
+
+    <style name="CustomTextViewStyle" parent="Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="YourAlertDialogTheme">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
+        <item name="android:windowBackground">@drawable/dialog_background</item>
+        <item name="android:windowSoftInputMode">stateUnspecified|adjustPan</item>
+        <item name="android:colorBackgroundCacheHint">@null</item>
     </style>
 
 </resources>
