--- a/app/src/main/res/layout/fragment_more.xml
+++ b/app/src/main/res/layout/fragment_more.xml
@@ -49,7 +49,9 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:text="Edit"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:background="@drawable/button_color"
+        android:textColor="#D7D7D7"/>
 
     <Button
         android:id="@+id/moreButtonDelete"
@@ -60,7 +62,8 @@
         android:layout_marginTop="5dp"
         android:textSize="20sp"
         android:text="Delete"
-        android:textColor="@color/white" />
+        android:textColor="@color/red"
+        android:background="@drawable/button_color"/>
 
     <Button
         android:id="@+id/moreButtonCancel"
@@ -71,5 +74,7 @@
         android:layout_marginTop="15dp"
         android:text="Cancel"
         android:textSize="20sp"
-        android:layout_marginBottom="15dp" />
+        android:background="@drawable/button_color"
+        android:layout_marginBottom="15dp"
+        android:textColor="#D7D7D7"/>
 </LinearLayout>
